// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphPage creates a new graph and calls API: after graph creation form submission 1`] = `<div />`;

exports[`GraphPage creates a new graph and calls API: create graph modal open 1`] = `<div />`;

exports[`GraphPage deletes a graph successfully: after graph deletion 1`] = `<div />`;

exports[`GraphPage deletes a graph successfully: delete graph modal open 1`] = `<div />`;

exports[`GraphPage edits an existing graph: after graph update 1`] = `<div />`;

exports[`GraphPage renders fallback on API failure: graph page fallback 1`] = `
<div>
  <div
    class="ant-flex css-dev-only-do-not-override-mncuj7 ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-mncuj7"
    >
      Something went wrong.
    </span>
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle colorRed icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        fill-rule="evenodd"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"
        />
      </svg>
    </span>
    <span
      class="ant-typography text-link css-dev-only-do-not-override-mncuj7"
    >
      Retry
    </span>
  </div>
</div>
`;

exports[`GraphPage renders the graph page with title and create button: graph page with create button 1`] = `
<div>
  <main
    class="ant-layout-content pageContainer css-dev-only-do-not-override-mncuj7"
    id="graphs"
  >
    <div
      class="pageTitleContainer ant-flex css-dev-only-do-not-override-mncuj7 ant-flex-wrap-wrap ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
      style="padding: 16px 24px;"
    >
      <span
        class="ant-typography css-dev-only-do-not-override-mncuj7"
        data-testid="heading"
        style="font-weight: 600; font-size: 16px;"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-mncuj7 ant-flex-align-center"
          style="gap: 10px;"
        >
          <span
            class="ant-typography css-dev-only-do-not-override-mncuj7"
          >
            Graphs
          </span>
          <span
            aria-describedby="test-id"
            aria-label="search"
            class="anticon anticon-search cursor-pointer"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </div>
      </span>
      <button
        aria-describedby="test-id"
        class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-link ant-btn-color-link ant-btn-variant-link"
        style="font-weight: 500;"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="plus-square"
            class="anticon anticon-plus-square"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="plus-square"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
              />
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </span>
        </span>
        <span>
          Create Graph
        </span>
      </button>
    </div>
    <div
      class="pageContent"
    >
      <div
        class="mb-sm ant-flex css-dev-only-do-not-override-mncuj7 ant-flex-align-center ant-flex-justify-space-between"
        style="margin-top: -10px; gap: 20px;"
      />
      <div
        data-testid="litegraph-table-pagination-bar"
        style="display: flex; align-items: center; justify-content: space-between; gap: 12px; flex-wrap: wrap; margin-bottom: 12px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-horizontal ant-space-align-center"
          style="flex-wrap: wrap; column-gap: 8px; row-gap: 8px;"
        >
          <div
            class="ant-space-item"
          >
            <button
              aria-describedby="test-id"
              aria-label="Refresh table"
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only"
              data-testid="litegraph-table-refresh"
              disabled=""
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="reload"
                  class="anticon anticon-reload anticon-spin"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="reload"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-mncuj7"
              data-testid="litegraph-table-total-records"
            >
              Total records: 
              <strong>
                0
              </strong>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-mncuj7"
              data-testid="litegraph-table-total-pages"
            >
              Total pages: 
              <strong>
                1
              </strong>
            </span>
          </div>
        </div>
        <div
          class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-horizontal ant-space-align-center"
          style="flex-wrap: wrap; column-gap: 8px; row-gap: 8px; justify-content: flex-end;"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              data-testid="litegraph-table-first-page"
              disabled=""
              type="button"
            >
              <span>
                First
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              data-testid="litegraph-table-previous-page"
              disabled=""
              type="button"
            >
              <span>
                Previous
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-mncuj7"
            >
              Page
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-input-number css-dev-only-do-not-override-mncuj7 ant-input-number-outlined"
              style="width: 82px;"
            >
              <div
                class="ant-input-number-handler-wrap"
              >
                <span
                  aria-disabled="true"
                  aria-label="Increase Value"
                  class="ant-input-number-handler ant-input-number-handler-up ant-input-number-handler-up-disabled"
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="up"
                    class="anticon anticon-up ant-input-number-handler-up-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="up"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-disabled="true"
                  aria-label="Decrease Value"
                  class="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-input-number-handler-down-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="ant-input-number-input-wrap"
              >
                <input
                  aria-label="Jump to page"
                  aria-valuemax="1"
                  aria-valuemin="1"
                  aria-valuenow="1"
                  autocomplete="off"
                  class="ant-input-number-input"
                  data-testid="litegraph-table-page-jump"
                  role="spinbutton"
                  step="1"
                  value="1"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-mncuj7"
            >
              of 
              1
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              data-testid="litegraph-table-next-page"
              disabled=""
              type="button"
            >
              <span>
                Next
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              data-testid="litegraph-table-last-page"
              disabled=""
              type="button"
            >
              <span>
                Last
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              aria-label="Records per page"
              class="ant-select ant-select-outlined css-dev-only-do-not-override-mncuj7 ant-select-single ant-select-show-arrow"
              data-testid="litegraph-table-page-size"
              style="width: 112px;"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-wrap"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Records per page"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="50"
                  >
                    50
                  </span>
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-mncuj7"
            >
              per page
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-table-wrapper css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-mncuj7"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning css-dev-only-do-not-override-mncuj7"
            >
              <span
                class="ant-spin-dot-holder"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="ant-table ant-table-empty css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-empty ant-empty-normal"
                            data-testid="litegraph-table-empty"
                            style="color: var(--ant-color-text-description); margin: 32px 0px;"
                          >
                            <div
                              class="ant-empty-image"
                              style="height: 48px; margin-bottom: 8px;"
                            >
                              <svg
                                aria-hidden="true"
                                data-testid="litegraph-table-empty-icon"
                                fill="none"
                                height="48"
                                style="color: inherit;"
                                viewBox="0 0 48 48"
                                width="48"
                              >
                                <circle
                                  cx="24"
                                  cy="24"
                                  r="18"
                                  stroke="currentColor"
                                  stroke-width="2"
                                />
                                <circle
                                  cx="18"
                                  cy="20"
                                  r="1.75"
                                  stroke="currentColor"
                                  stroke-width="2"
                                />
                                <circle
                                  cx="30"
                                  cy="20"
                                  r="1.75"
                                  stroke="currentColor"
                                  stroke-width="2"
                                />
                                <path
                                  d="M16 32c2.2-3 4.8-4.5 8-4.5s5.8 1.5 8 4.5"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-width="2"
                                />
                              </svg>
                            </div>
                            <div
                              class="ant-empty-description"
                              style="color: inherit;"
                            >
                              No data
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`GraphPage sorts graph list by name column: after name column sort 1`] = `
<div>
  <div
    data-testid="litegraph-table-pagination-bar"
    style="display: flex; align-items: center; justify-content: space-between; gap: 12px; flex-wrap: wrap; margin-bottom: 12px;"
  >
    <div
      class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-horizontal ant-space-align-center"
      style="flex-wrap: wrap; column-gap: 8px; row-gap: 8px;"
    >
      <div
        class="ant-space-item"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-mncuj7"
          data-testid="litegraph-table-total-records"
        >
          Total records: 
          <strong>
            2
          </strong>
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-mncuj7"
          data-testid="litegraph-table-total-pages"
        >
          Total pages: 
          <strong>
            1
          </strong>
        </span>
      </div>
    </div>
    <div
      class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-horizontal ant-space-align-center"
      style="flex-wrap: wrap; column-gap: 8px; row-gap: 8px; justify-content: flex-end;"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          data-testid="litegraph-table-first-page"
          disabled=""
          type="button"
        >
          <span>
            First
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          data-testid="litegraph-table-previous-page"
          disabled=""
          type="button"
        >
          <span>
            Previous
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-mncuj7"
        >
          Page
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-input-number css-dev-only-do-not-override-mncuj7 ant-input-number-outlined"
          style="width: 82px;"
        >
          <div
            class="ant-input-number-handler-wrap"
          >
            <span
              aria-disabled="true"
              aria-label="Increase Value"
              class="ant-input-number-handler ant-input-number-handler-up ant-input-number-handler-up-disabled"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="up"
                class="anticon anticon-up ant-input-number-handler-up-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-disabled="true"
              aria-label="Decrease Value"
              class="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-input-number-handler-down-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            class="ant-input-number-input-wrap"
          >
            <input
              aria-label="Jump to page"
              aria-valuemax="1"
              aria-valuemin="1"
              aria-valuenow="1"
              autocomplete="off"
              class="ant-input-number-input"
              data-testid="litegraph-table-page-jump"
              role="spinbutton"
              step="1"
              value="1"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-mncuj7"
        >
          of 
          1
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          data-testid="litegraph-table-next-page"
          disabled=""
          type="button"
        >
          <span>
            Next
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          data-testid="litegraph-table-last-page"
          disabled=""
          type="button"
        >
          <span>
            Last
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          aria-label="Records per page"
          class="ant-select ant-select-outlined css-dev-only-do-not-override-mncuj7 ant-select-single ant-select-show-arrow"
          data-testid="litegraph-table-page-size"
          style="width: 112px;"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-label="Records per page"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="10"
              >
                10
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-mncuj7"
        >
          per page
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-table-wrapper css-dev-only-do-not-override-mncuj7"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      aria-label="Name"
                      aria-sort="ascending"
                      class="ant-table-cell ant-table-column-sort ant-table-column-has-sorters"
                      scope="col"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="test-id"
                        class="ant-table-column-sorters"
                      >
                        <span
                          class="ant-table-column-title"
                        >
                          Name
                        </span>
                        <span
                          class="ant-table-column-sorter ant-table-column-sorter-full"
                        >
                          <span
                            aria-hidden="true"
                            class="ant-table-column-sorter-inner"
                          >
                            <span
                              aria-label="caret-up"
                              class="anticon anticon-caret-up ant-table-column-sorter-up active"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-up"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                />
                              </svg>
                            </span>
                            <span
                              aria-label="caret-down"
                              class="anticon anticon-caret-down ant-table-column-sorter-down"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="caret-down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="d52aeab4-4de7-4076-98dd-461d4a61ac88"
                  >
                    <td
                      class="ant-table-cell ant-table-column-sort"
                    >
                      <div>
                        testttt 2
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="e6d4294e-6f49-4d67-8260-5e44c2b077a6"
                  >
                    <td
                      class="ant-table-cell ant-table-column-sort"
                    >
                      <div>
                        Test Demo Graph
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
